removed collector.tolist to -> toList